--- a/index.css
+++ b/index.css
@@ -3723,7 +3723,7 @@ margin-right: 5px;
   font-family:Arial, Helvetica, sans-serif;
   Width:340px;
   height:230px;
-  color:#74ffb5;
+  color:#5a7366;
   /*background-color:rgb(255, 255, 255);*/
   background-color: rgb(255, 255, 255);
   border-color: rgb(250, 248, 248);
